--- a/richwysiwygeditor/src/main/res/values/strings.xml
+++ b/richwysiwygeditor/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="link">Link</string>
     <string name="title">Title</string>
     <string name="text_size_hint">Value 1–7</string>
+    <string name="link_example">https://site.com/page or mytetra://note/record_id</string>
 </resources>
