Fix getting TEXT_SIZE from stateChange(); Add "hidden" meta-tag in html-page head; Set default value of option "Editor autosave" to false.

--- a/richwysiwygeditor/src/main/res/values/strings.xml
+++ b/richwysiwygeditor/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">RichWYSIWYGEditor</string>
     <string name="answer_ok">Ok</string>
     <string name="answer_cancel">Cancel</string>
-    <string name="text_size">Text size</string>
+    <string name="text_size">Text size (1-7)</string>
     <string name="text_color">Text color</string>
     <string name="text_bold">Bold</string>
     <string name="text_italic">Italic</string>
