--- a/richwysiwygeditor/src/main/res/values-ru/strings.xml
+++ b/richwysiwygeditor/src/main/res/values-ru/strings.xml
@@ -18,4 +18,5 @@
     <string name="title">Заголовок</string>
     <string name="text_size_hint">Значение 1–7</string>
     <string name="link_example">URL или ссылка MyTetra</string>
+    <string name="confirm_selected_images">Выбрать</string>
 </resources>
