--- a/richwysiwygeditor/src/main/res/values/strings.xml
+++ b/richwysiwygeditor/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title">Title</string>
     <string name="text_size_hint">Value 1–7</string>
     <string name="link_example">URL or Mytetra link</string>
+    <string name="confirm_selected_images">Confirm</string>
 </resources>
