--- a/richwysiwygeditor/src/main/res/values-ru/strings.xml
+++ b/richwysiwygeditor/src/main/res/values-ru/strings.xml
@@ -18,6 +18,6 @@
     <string name="title">Заголовок</string>
     <string name="text_size_hint">Значение 1–7</string>
     <string name="link_example">URL или ссылка MyTetra</string>
-    <string name="confirm_selected_images">Выбрать</string>
-    <string name="title_gallery">Галерея</string>
+    <string name="width_points">Ширина (точек)</string>
+    <string name="height_points">Высота (точек)</string>
 </resources>
