--- a/richwysiwygeditor/src/main/res/values-ru/strings.xml
+++ b/richwysiwygeditor/src/main/res/values-ru/strings.xml
@@ -20,4 +20,5 @@
     <string name="link_example">URL или ссылка MyTetra</string>
     <string name="width_points">Ширина (точек)</string>
     <string name="height_points">Высота (точек)</string>
+    <string name="invalid_number">Недопустимое число:&#160;</string>
 </resources>
