Add tooltips to an editor actions.

--- a/richwysiwygeditor/src/main/res/values-ru/strings.xml
+++ b/richwysiwygeditor/src/main/res/values-ru/strings.xml
@@ -4,17 +4,42 @@
     <string name="answer_cancel">Отмена</string>
     <string name="answer_yes">Да</string>
     <string name="answer_no">Нет</string>
+
     <string name="insert_image">Вставить изображение</string>
-    <string name="insert_line">Вставить линию</string>
+    <string name="insert_line">Вставить горизантальную линию</string>
     <string name="insert_link">Вставить ссылку</string>
-    <string name="insert_video">вставить Youtube-видео</string>
+    <string name="insert_video">Вставить видео</string>
     <string name="remove_link">Удалить ссылку</string>
     <string name="text_align">Выравнивание текста</string>
     <string name="text_bold">Жирный текст</string>
     <string name="text_color">Цвет текста</string>
     <string name="text_italic">Наклонный текст</string>
-    <string name="text_size">Размер текста (1-7)</string>
     <string name="text_strike">Зачеркнутый текст</string>
+    <string name="text_size">Размер текста (1-7)</string>
+    <string name="insert_formula">Вставить формулу</string>
+    <string name="insert_table">Вставить таблицу</string>
+    <string name="clear_format">Очистить форматирование текста</string>
+    <string name="indent_dec">Уменьшить отступ</string>
+    <string name="indent_inc">Увеличить отступ</string>
+    <string name="number_list">Нумерованный список</string>
+    <string name="bulled_list">Ненумерованнй список</string>
+    <string name="quotes">В кавычки</string>
+    <string name="code">Код</string>
+    <string name="undo">Отменить действие</string>
+    <string name="redo">Повторить отмененное действие</string>
+    <string name="up">Курсор вверх</string>
+    <string name="left">Курсор влево</string>
+    <string name="right">Курсор вправо</string>
+    <string name="down">Курсор вниз</string>
+    <string name="selection_mode">Включить режим выделения</string>
+    <string name="select_word">Выделить слово</string>
+    <string name="select_all">Выделить все</string>
+    <string name="copy">Копировать</string>
+    <string name="cut">Вырезать</string>
+    <string name="paste">Вставить из буфера обмена</string>
+    <string name="paste_text">Вставить только текст</string>
+    <string name="forward_delete">Удалить следующий символ</string>
+
     <string name="link">Ссылка</string>
     <string name="title">Заголовок</string>
     <string name="text_size_hint">Значение 1–7</string>
