Updated Android Studio to 4.0.1; Switched to targetSdkVersion = 29; Added Fab to exit fullscreen mode; Added a button to show/hide the keyboard.

--- a/richwysiwygeditor/src/main/res/values-ru/strings.xml
+++ b/richwysiwygeditor/src/main/res/values-ru/strings.xml
@@ -45,4 +45,5 @@
     <string name="invalid_number">Недопустимое число:&#160;</string>
     <string name="set_similar_image_params">Установить аналогичные параметры для остальных изображений</string>
     <string name="switch_toolbars">Переключить панели</string>
+    <string name="keyboard">Клавиатура</string>
 </resources>
